package com.nanyin.pattern.factory.factoryMethod;

public interface Shoes {
    void getColor();
}
