package com.nanyin.pattern.factory.factoryMethod;

public interface ShoesFactory {
    Shoes getShoes();
}
